test/cases/compile_errors/stage1/obj/function_with_invalid_return_type.zig
export fn foo() boid {}

// error
// backend=stage1
// target=native
//
// tmp.zig:1:17: error: use of undeclared identifier 'boid'
